<resources>

    <!--    Main Activity Login     -->
    <string name="app_name">Firebase Authentication Example</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="hello">Welcome %1$s!</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Create New Account</string>
    <string name="firestore_button">Launch Firestore Activity</string>
    <string name="logout_toolbar_button">Logout Button</string>
    <string name="weightFireFilled"></string>
    <string name="ageFireFilled"></string>
    <string name="genderFireFilled"></string>

    <!--    Authentication Feedback     -->
    <string name="login_successful">Sign-in Successful!</string>
    <string name="new_acct_successful">Account Created Successfully!</string>
    <string name="logout_successful">Logged Out Successfully!</string>

    <!--    Welcome Page Activity   -->
    <string name="player_profile_button">Player Profile</string>
    <string name="welcome_description">Welcome to Buzztender! The application that helps you improve at games through drinking alcohol. Sometimes liquid courage is needed to improve. All you need to do is enter your information in your profile, and choose a game that you wanna be great in. Then Drink up! This application cacluates that optimum amount of drinks you should have per hour to be fantastic at your drinking activity. We also let you log previous games with the amount of alcohol to see what works best for you. Happy drinking and happy playing from your Buzztender community.</string>

    <!--    User Profile Activity    -->
    <string name="nickname">Nickname:</string>
    <string name="gender">Gender:</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="update_profile_button">Update Profile</string>
    <string-array name="gender_array">
        <item>Select one</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hint_lbs">lbs</string>
    <string name="hint_years">Years</string>
    <string name="update_profile_description">This information is used to calculate your blood alcohol content. Enter a value for all the fields and press the update button.</string>
    <string name="my_games">My Games</string>

    <!--    Games Available Acitivity    -->
    <string name="games_avail_header">Select a game to play or learn more:</string>

    <!--    Specific Game Activity      -->
    <string name="bac_calc_info">Please enter your information below. In order to get you at your prime drinking state we need as accurate of information as possible. \n Don\'t worry we aren\'t selling your info to the government, just some programmers trying to calcuate your BAC.</string>
    <string name="description">Description</string>
    <string name="lets_play">Lets play...</string>
    <string name="arrow_button">arrowbutton</string>
    <string name="your_bac_to_maintain">Your BAC to maintain:</string>
    <string name="above_is_the_optimal_bac_level_you_should_try_to_maintain_for_this_game_below_we_have_included_a_bac_calculator_to_help_you_out_for_reference_one_spirit_contains_one_shot_one_beer_is_around_5_and_wine_is_12_so_add_your_drinks_accordingly_also_hours_is_the_hours_passed_since_you_started_drinking">Above is the optimal BAC level you should try to maintain for this game. Below we have included a BAC calculator to help you out! For reference, one spirit contains one shot, one beer is around 5%, and wine is 12% so add your drinks accordingly. Also, hours is the hours passed since you started drinking.</string>
    <string name="calculator">Calculator:</string>
    <string name="spirit_s">Spirit(s):</string>
    <string name="beer_s">Beer(s):</string>
    <string name="wine_s">Wine(s):</string>
    <string name="hour_s">Hour(s):</string>
    <string-array name="win_lose_array">
        <item>Select one:</item>
        <item>Win</item>
        <item>Loss</item>
        <item>Just for fun</item>
    </string-array>
    <string name="calculate">Calculate</string>
    <string name="save_game">Save Game</string>
    <string name="win_loss">Win/Lose:</string>
    <string name="your_bac">Your BAC is:</string>
    <string name="global_games">Global Games</string>

    <!--    Completed Game Card-->
    <string name="cg_nickname">Played by:</string>
    <string name="cg_avg_bac">BAC:</string>
    <string name="cg_result">Result:</string>
    <string name="buzztender">BuzzTender</string>

    <!--   Location  Activities-->
    <string name="intro_label">Current location</string>
    <string name="not_found">Your location could not be determined.</string>
    <string name="permission_warning">This app requires permission to access your location in order to function correctly.</string>
    <string name="lat_label">Latitude:</string>
    <string name="long_label">Longitude:</string>
    <string name="accuracy_label">Accuracy:</string>
    <string name="na">N/A</string>
    <string name="id_header">Id</string>
    <string name="time_header">Timestamp</string>
    <string name="lat_header">lat</string>
    <string name="lon_header">lon</string>
    <string name="acc_header">acc</string>
    <string name="history_label">History</string>
    <string name="record_button_text">Record Location</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>
